parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> ALGORITMO ID bloque FIN ALGORITMO
Rule 2     bloque -> declaraciones INICIO instrucciones FIN
Rule 3     declaraciones -> DEFINIR lista_ids tipo
Rule 4     declaraciones -> declaraciones DEFINIR lista_ids tipo
Rule 5     lista_ids -> ID
Rule 6     lista_ids -> lista_ids COMA ID
Rule 7     tipo -> ENTERO
Rule 8     tipo -> DECIMAL
Rule 9     tipo -> CADENA_TIPO
Rule 10    instrucciones -> instruccion
Rule 11    instrucciones -> instrucciones instruccion
Rule 12    instruccion -> escritura
Rule 13    instruccion -> asignacion
Rule 14    instruccion -> mientras
Rule 15    instruccion -> si
Rule 16    asignacion -> ID ASIGNAR expresion PUNTO_Y_COMA
Rule 17    asignacion -> ID ASIGNAR expresion
Rule 18    escritura -> ESCRIBIR PARENTESIS_IZQUIERDO lista_expr PARENTESIS_DERECHO PUNTO_Y_COMA
Rule 19    escritura -> ESCRIBIR PARENTESIS_IZQUIERDO lista_expr PARENTESIS_DERECHO
Rule 20    lista_expr -> expresion
Rule 21    lista_expr -> lista_expr COMA expresion
Rule 22    expresion -> NUMERO
Rule 23    expresion -> FLOTANTE
Rule 24    expresion -> CADENA
Rule 25    expresion -> VERDADERO
Rule 26    expresion -> FALSO
Rule 27    expresion -> ID
Rule 28    expresion -> expresion MAS expresion
Rule 29    expresion -> expresion MENOS expresion
Rule 30    expresion -> expresion POR expresion
Rule 31    expresion -> expresion DIVIDIDO expresion
Rule 32    expresion -> expresion MODULO expresion
Rule 33    expresion -> expresion IGUAL expresion
Rule 34    expresion -> expresion DIFERENTE expresion
Rule 35    expresion -> expresion MENOR expresion
Rule 36    expresion -> expresion MAYOR expresion
Rule 37    expresion -> expresion MENOR_IGUAL expresion
Rule 38    expresion -> expresion MAYOR_IGUAL expresion
Rule 39    expresion -> expresion Y expresion
Rule 40    expresion -> expresion O expresion
Rule 41    expresion -> NEG expresion
Rule 42    expresion -> PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO
Rule 43    mientras -> MIENTRAS expresion instrucciones FIN MIENTRAS
Rule 44    si -> SI expresion ENTONCES instrucciones sino_opcional
Rule 45    sino_opcional -> SINO si
Rule 46    sino_opcional -> SINO instrucciones
Rule 47    sino_opcional -> empty
Rule 48    empty -> <empty>

Terminals, with rules where they appear

ALGORITMO            : 1 1
ASIGNAR              : 16 17
CADENA               : 24
CADENA_TIPO          : 9
COMA                 : 6 21
DECIMAL              : 8
DEFINIR              : 3 4
DIFERENTE            : 34
DIVIDIDO             : 31
ENTERO               : 7
ENTONCES             : 44
ESCRIBIR             : 18 19
FALSO                : 26
FIN                  : 1 2 43
FLOTANTE             : 23
ID                   : 1 5 6 16 17 27
IGUAL                : 33
INICIO               : 2
MAS                  : 28
MAYOR                : 36
MAYOR_IGUAL          : 38
MENOR                : 35
MENOR_IGUAL          : 37
MENOS                : 29
MIENTRAS             : 43 43
MODULO               : 32
NEG                  : 41
NUMERO               : 22
O                    : 40
PARENTESIS_DERECHO   : 18 19 42
PARENTESIS_IZQUIERDO : 18 19 42
POR                  : 30
PUNTO_Y_COMA         : 16 18
SI                   : 44
SINO                 : 45 46
VERDADERO            : 25
Y                    : 39
error                : 

Nonterminals, with rules where they appear

asignacion           : 13
bloque               : 1
declaraciones        : 2 4
empty                : 47
escritura            : 12
expresion            : 16 17 20 21 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 42 43 44
instruccion          : 10 11
instrucciones        : 2 11 43 44 46
lista_expr           : 18 19 21
lista_ids            : 3 4 6
mientras             : 14
programa             : 0
si                   : 15 45
sino_opcional        : 44
tipo                 : 3 4

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . ALGORITMO ID bloque FIN ALGORITMO

    ALGORITMO       shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> ALGORITMO . ID bloque FIN ALGORITMO

    ID              shift and go to state 3


state 3

    (1) programa -> ALGORITMO ID . bloque FIN ALGORITMO
    (2) bloque -> . declaraciones INICIO instrucciones FIN
    (3) declaraciones -> . DEFINIR lista_ids tipo
    (4) declaraciones -> . declaraciones DEFINIR lista_ids tipo

    DEFINIR         shift and go to state 6

    bloque                         shift and go to state 4
    declaraciones                  shift and go to state 5

state 4

    (1) programa -> ALGORITMO ID bloque . FIN ALGORITMO

    FIN             shift and go to state 7


state 5

    (2) bloque -> declaraciones . INICIO instrucciones FIN
    (4) declaraciones -> declaraciones . DEFINIR lista_ids tipo

    INICIO          shift and go to state 8
    DEFINIR         shift and go to state 9


state 6

    (3) declaraciones -> DEFINIR . lista_ids tipo
    (5) lista_ids -> . ID
    (6) lista_ids -> . lista_ids COMA ID

    ID              shift and go to state 11

    lista_ids                      shift and go to state 10

state 7

    (1) programa -> ALGORITMO ID bloque FIN . ALGORITMO

    ALGORITMO       shift and go to state 12


state 8

    (2) bloque -> declaraciones INICIO . instrucciones FIN
    (10) instrucciones -> . instruccion
    (11) instrucciones -> . instrucciones instruccion
    (12) instruccion -> . escritura
    (13) instruccion -> . asignacion
    (14) instruccion -> . mientras
    (15) instruccion -> . si
    (18) escritura -> . ESCRIBIR PARENTESIS_IZQUIERDO lista_expr PARENTESIS_DERECHO PUNTO_Y_COMA
    (19) escritura -> . ESCRIBIR PARENTESIS_IZQUIERDO lista_expr PARENTESIS_DERECHO
    (16) asignacion -> . ID ASIGNAR expresion PUNTO_Y_COMA
    (17) asignacion -> . ID ASIGNAR expresion
    (43) mientras -> . MIENTRAS expresion instrucciones FIN MIENTRAS
    (44) si -> . SI expresion ENTONCES instrucciones sino_opcional

    ESCRIBIR        shift and go to state 19
    ID              shift and go to state 20
    MIENTRAS        shift and go to state 21
    SI              shift and go to state 22

    instrucciones                  shift and go to state 13
    instruccion                    shift and go to state 14
    escritura                      shift and go to state 15
    asignacion                     shift and go to state 16
    mientras                       shift and go to state 17
    si                             shift and go to state 18

state 9

    (4) declaraciones -> declaraciones DEFINIR . lista_ids tipo
    (5) lista_ids -> . ID
    (6) lista_ids -> . lista_ids COMA ID

    ID              shift and go to state 11

    lista_ids                      shift and go to state 23

state 10

    (3) declaraciones -> DEFINIR lista_ids . tipo
    (6) lista_ids -> lista_ids . COMA ID
    (7) tipo -> . ENTERO
    (8) tipo -> . DECIMAL
    (9) tipo -> . CADENA_TIPO

    COMA            shift and go to state 25
    ENTERO          shift and go to state 26
    DECIMAL         shift and go to state 27
    CADENA_TIPO     shift and go to state 28

    tipo                           shift and go to state 24

state 11

    (5) lista_ids -> ID .

    COMA            reduce using rule 5 (lista_ids -> ID .)
    ENTERO          reduce using rule 5 (lista_ids -> ID .)
    DECIMAL         reduce using rule 5 (lista_ids -> ID .)
    CADENA_TIPO     reduce using rule 5 (lista_ids -> ID .)


state 12

    (1) programa -> ALGORITMO ID bloque FIN ALGORITMO .

    $end            reduce using rule 1 (programa -> ALGORITMO ID bloque FIN ALGORITMO .)


state 13

    (2) bloque -> declaraciones INICIO instrucciones . FIN
    (11) instrucciones -> instrucciones . instruccion
    (12) instruccion -> . escritura
    (13) instruccion -> . asignacion
    (14) instruccion -> . mientras
    (15) instruccion -> . si
    (18) escritura -> . ESCRIBIR PARENTESIS_IZQUIERDO lista_expr PARENTESIS_DERECHO PUNTO_Y_COMA
    (19) escritura -> . ESCRIBIR PARENTESIS_IZQUIERDO lista_expr PARENTESIS_DERECHO
    (16) asignacion -> . ID ASIGNAR expresion PUNTO_Y_COMA
    (17) asignacion -> . ID ASIGNAR expresion
    (43) mientras -> . MIENTRAS expresion instrucciones FIN MIENTRAS
    (44) si -> . SI expresion ENTONCES instrucciones sino_opcional

    FIN             shift and go to state 29
    ESCRIBIR        shift and go to state 19
    ID              shift and go to state 20
    MIENTRAS        shift and go to state 21
    SI              shift and go to state 22

    instruccion                    shift and go to state 30
    escritura                      shift and go to state 15
    asignacion                     shift and go to state 16
    mientras                       shift and go to state 17
    si                             shift and go to state 18

state 14

    (10) instrucciones -> instruccion .

    FIN             reduce using rule 10 (instrucciones -> instruccion .)
    ESCRIBIR        reduce using rule 10 (instrucciones -> instruccion .)
    ID              reduce using rule 10 (instrucciones -> instruccion .)
    MIENTRAS        reduce using rule 10 (instrucciones -> instruccion .)
    SI              reduce using rule 10 (instrucciones -> instruccion .)
    SINO            reduce using rule 10 (instrucciones -> instruccion .)


state 15

    (12) instruccion -> escritura .

    FIN             reduce using rule 12 (instruccion -> escritura .)
    ESCRIBIR        reduce using rule 12 (instruccion -> escritura .)
    ID              reduce using rule 12 (instruccion -> escritura .)
    MIENTRAS        reduce using rule 12 (instruccion -> escritura .)
    SI              reduce using rule 12 (instruccion -> escritura .)
    SINO            reduce using rule 12 (instruccion -> escritura .)


state 16

    (13) instruccion -> asignacion .

    FIN             reduce using rule 13 (instruccion -> asignacion .)
    ESCRIBIR        reduce using rule 13 (instruccion -> asignacion .)
    ID              reduce using rule 13 (instruccion -> asignacion .)
    MIENTRAS        reduce using rule 13 (instruccion -> asignacion .)
    SI              reduce using rule 13 (instruccion -> asignacion .)
    SINO            reduce using rule 13 (instruccion -> asignacion .)


state 17

    (14) instruccion -> mientras .

    FIN             reduce using rule 14 (instruccion -> mientras .)
    ESCRIBIR        reduce using rule 14 (instruccion -> mientras .)
    ID              reduce using rule 14 (instruccion -> mientras .)
    MIENTRAS        reduce using rule 14 (instruccion -> mientras .)
    SI              reduce using rule 14 (instruccion -> mientras .)
    SINO            reduce using rule 14 (instruccion -> mientras .)


state 18

    (15) instruccion -> si .

    FIN             reduce using rule 15 (instruccion -> si .)
    ESCRIBIR        reduce using rule 15 (instruccion -> si .)
    ID              reduce using rule 15 (instruccion -> si .)
    MIENTRAS        reduce using rule 15 (instruccion -> si .)
    SI              reduce using rule 15 (instruccion -> si .)
    SINO            reduce using rule 15 (instruccion -> si .)


state 19

    (18) escritura -> ESCRIBIR . PARENTESIS_IZQUIERDO lista_expr PARENTESIS_DERECHO PUNTO_Y_COMA
    (19) escritura -> ESCRIBIR . PARENTESIS_IZQUIERDO lista_expr PARENTESIS_DERECHO

    PARENTESIS_IZQUIERDO shift and go to state 31


state 20

    (16) asignacion -> ID . ASIGNAR expresion PUNTO_Y_COMA
    (17) asignacion -> ID . ASIGNAR expresion

    ASIGNAR         shift and go to state 32


state 21

    (43) mientras -> MIENTRAS . expresion instrucciones FIN MIENTRAS
    (22) expresion -> . NUMERO
    (23) expresion -> . FLOTANTE
    (24) expresion -> . CADENA
    (25) expresion -> . VERDADERO
    (26) expresion -> . FALSO
    (27) expresion -> . ID
    (28) expresion -> . expresion MAS expresion
    (29) expresion -> . expresion MENOS expresion
    (30) expresion -> . expresion POR expresion
    (31) expresion -> . expresion DIVIDIDO expresion
    (32) expresion -> . expresion MODULO expresion
    (33) expresion -> . expresion IGUAL expresion
    (34) expresion -> . expresion DIFERENTE expresion
    (35) expresion -> . expresion MENOR expresion
    (36) expresion -> . expresion MAYOR expresion
    (37) expresion -> . expresion MENOR_IGUAL expresion
    (38) expresion -> . expresion MAYOR_IGUAL expresion
    (39) expresion -> . expresion Y expresion
    (40) expresion -> . expresion O expresion
    (41) expresion -> . NEG expresion
    (42) expresion -> . PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO

    NUMERO          shift and go to state 34
    FLOTANTE        shift and go to state 35
    CADENA          shift and go to state 36
    VERDADERO       shift and go to state 37
    FALSO           shift and go to state 38
    ID              shift and go to state 39
    NEG             shift and go to state 40
    PARENTESIS_IZQUIERDO shift and go to state 41

    expresion                      shift and go to state 33

state 22

    (44) si -> SI . expresion ENTONCES instrucciones sino_opcional
    (22) expresion -> . NUMERO
    (23) expresion -> . FLOTANTE
    (24) expresion -> . CADENA
    (25) expresion -> . VERDADERO
    (26) expresion -> . FALSO
    (27) expresion -> . ID
    (28) expresion -> . expresion MAS expresion
    (29) expresion -> . expresion MENOS expresion
    (30) expresion -> . expresion POR expresion
    (31) expresion -> . expresion DIVIDIDO expresion
    (32) expresion -> . expresion MODULO expresion
    (33) expresion -> . expresion IGUAL expresion
    (34) expresion -> . expresion DIFERENTE expresion
    (35) expresion -> . expresion MENOR expresion
    (36) expresion -> . expresion MAYOR expresion
    (37) expresion -> . expresion MENOR_IGUAL expresion
    (38) expresion -> . expresion MAYOR_IGUAL expresion
    (39) expresion -> . expresion Y expresion
    (40) expresion -> . expresion O expresion
    (41) expresion -> . NEG expresion
    (42) expresion -> . PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO

    NUMERO          shift and go to state 34
    FLOTANTE        shift and go to state 35
    CADENA          shift and go to state 36
    VERDADERO       shift and go to state 37
    FALSO           shift and go to state 38
    ID              shift and go to state 39
    NEG             shift and go to state 40
    PARENTESIS_IZQUIERDO shift and go to state 41

    expresion                      shift and go to state 42

state 23

    (4) declaraciones -> declaraciones DEFINIR lista_ids . tipo
    (6) lista_ids -> lista_ids . COMA ID
    (7) tipo -> . ENTERO
    (8) tipo -> . DECIMAL
    (9) tipo -> . CADENA_TIPO

    COMA            shift and go to state 25
    ENTERO          shift and go to state 26
    DECIMAL         shift and go to state 27
    CADENA_TIPO     shift and go to state 28

    tipo                           shift and go to state 43

state 24

    (3) declaraciones -> DEFINIR lista_ids tipo .

    INICIO          reduce using rule 3 (declaraciones -> DEFINIR lista_ids tipo .)
    DEFINIR         reduce using rule 3 (declaraciones -> DEFINIR lista_ids tipo .)


state 25

    (6) lista_ids -> lista_ids COMA . ID

    ID              shift and go to state 44


state 26

    (7) tipo -> ENTERO .

    INICIO          reduce using rule 7 (tipo -> ENTERO .)
    DEFINIR         reduce using rule 7 (tipo -> ENTERO .)


state 27

    (8) tipo -> DECIMAL .

    INICIO          reduce using rule 8 (tipo -> DECIMAL .)
    DEFINIR         reduce using rule 8 (tipo -> DECIMAL .)


state 28

    (9) tipo -> CADENA_TIPO .

    INICIO          reduce using rule 9 (tipo -> CADENA_TIPO .)
    DEFINIR         reduce using rule 9 (tipo -> CADENA_TIPO .)


state 29

    (2) bloque -> declaraciones INICIO instrucciones FIN .

    FIN             reduce using rule 2 (bloque -> declaraciones INICIO instrucciones FIN .)


state 30

    (11) instrucciones -> instrucciones instruccion .

    FIN             reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    ESCRIBIR        reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    MIENTRAS        reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    SI              reduce using rule 11 (instrucciones -> instrucciones instruccion .)
    SINO            reduce using rule 11 (instrucciones -> instrucciones instruccion .)


state 31

    (18) escritura -> ESCRIBIR PARENTESIS_IZQUIERDO . lista_expr PARENTESIS_DERECHO PUNTO_Y_COMA
    (19) escritura -> ESCRIBIR PARENTESIS_IZQUIERDO . lista_expr PARENTESIS_DERECHO
    (20) lista_expr -> . expresion
    (21) lista_expr -> . lista_expr COMA expresion
    (22) expresion -> . NUMERO
    (23) expresion -> . FLOTANTE
    (24) expresion -> . CADENA
    (25) expresion -> . VERDADERO
    (26) expresion -> . FALSO
    (27) expresion -> . ID
    (28) expresion -> . expresion MAS expresion
    (29) expresion -> . expresion MENOS expresion
    (30) expresion -> . expresion POR expresion
    (31) expresion -> . expresion DIVIDIDO expresion
    (32) expresion -> . expresion MODULO expresion
    (33) expresion -> . expresion IGUAL expresion
    (34) expresion -> . expresion DIFERENTE expresion
    (35) expresion -> . expresion MENOR expresion
    (36) expresion -> . expresion MAYOR expresion
    (37) expresion -> . expresion MENOR_IGUAL expresion
    (38) expresion -> . expresion MAYOR_IGUAL expresion
    (39) expresion -> . expresion Y expresion
    (40) expresion -> . expresion O expresion
    (41) expresion -> . NEG expresion
    (42) expresion -> . PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO

    NUMERO          shift and go to state 34
    FLOTANTE        shift and go to state 35
    CADENA          shift and go to state 36
    VERDADERO       shift and go to state 37
    FALSO           shift and go to state 38
    ID              shift and go to state 39
    NEG             shift and go to state 40
    PARENTESIS_IZQUIERDO shift and go to state 41

    lista_expr                     shift and go to state 45
    expresion                      shift and go to state 46

state 32

    (16) asignacion -> ID ASIGNAR . expresion PUNTO_Y_COMA
    (17) asignacion -> ID ASIGNAR . expresion
    (22) expresion -> . NUMERO
    (23) expresion -> . FLOTANTE
    (24) expresion -> . CADENA
    (25) expresion -> . VERDADERO
    (26) expresion -> . FALSO
    (27) expresion -> . ID
    (28) expresion -> . expresion MAS expresion
    (29) expresion -> . expresion MENOS expresion
    (30) expresion -> . expresion POR expresion
    (31) expresion -> . expresion DIVIDIDO expresion
    (32) expresion -> . expresion MODULO expresion
    (33) expresion -> . expresion IGUAL expresion
    (34) expresion -> . expresion DIFERENTE expresion
    (35) expresion -> . expresion MENOR expresion
    (36) expresion -> . expresion MAYOR expresion
    (37) expresion -> . expresion MENOR_IGUAL expresion
    (38) expresion -> . expresion MAYOR_IGUAL expresion
    (39) expresion -> . expresion Y expresion
    (40) expresion -> . expresion O expresion
    (41) expresion -> . NEG expresion
    (42) expresion -> . PARENTESIS_IZQUIERDO expresion PARENTESIS_DERECHO

    NUMERO          shift and go to state 34
    FLOTANTE        shift and go to state 35
    CADENA          shift and go to state 36
    VERDADERO       shift and go to state 37
    FALSO           shift and go to state 38
    ID              shift and go to state 39
    NEG             shift and go to state 40
    PARENTESIS_IZQUIERDO shift and go to state 41

    expresion                      shift and go to state 47

state 33

    (43) mientras -> MIENTRAS expresion . instrucciones FIN MIENTRAS
    (28) expresion -> expresion . MAS expresion
    (29) expresion -> expresion . MENOS expresion
    (30) expresion -> expresion . POR expresion
    (31) expresion -> expresion . DIVIDIDO expresion
    (32) expresion -> expresion . MODULO expresion
    (33) expresion -> expresion . IGUAL expresion
    (34) expresion -> expresion . DIFERENTE expresion
    (35) expresion -> expresion . MENOR expresion
    (36) expresion -> expresion . MAYOR expresion
    (37) expresion -> expresion . MENOR_IGUAL expresion
    (38) expresion -> expresion . MAYOR_IGUAL expresion
    (39) expresion -> expresion . Y expresion
    (40) expresion -> expresion . O expresion
    (10) instrucciones -> . instruccion
    (11) instrucciones -> . instrucciones instruccion
    (12) instruccion -> . escritura
    (13) instruccion -> . asignacion
    (14) instruccion -> . mientras
    (15) instruccion -> . si
    (18) escritura -> . ESCRIBIR PARENTESIS_IZQUIERDO lista_expr PARENTESIS_DERECHO PUNTO_Y_COMA
    (19) escritura -> . ESCRIBIR PARENTESIS_IZQUIERDO lista_expr PARENTESIS_DERECHO
    (16) asignacion -> . ID ASIGNAR expresion PUNTO_Y_COMA
    (17) asignacion -> . ID ASIGNAR expresion
    (43) mientras -> . MIENTRAS expresion instrucciones FIN MIENTRAS
    (44) si -> . SI expresion ENTONCES instrucciones sino_opcional

    MAS             shift and go to state 49
    MENOS           shift and go to state 50
    POR             shift and go to state 51
    DIVIDIDO        shift and go to state 52
    MODULO          shift and go to state 53
    IGUAL           shift and go to state 54
    DIFERENTE       shift and go to state 55
    MENOR           shift and go to state 56
    MAYOR           shift and go to state 57
    MENOR_IGUAL     shift and go to state 58
    MAYOR_IGUAL     shift and go to state 59
    Y               shift and go to state 60
    O               shift and go to state 61
    ESCRIBIR        shift and go to state 19
    ID              shift and go to state 20
    MIENTRAS        shift and go to state 21
    SI              shift and go to state 22

    instrucciones                  shift and go to state 48
    instruccion                    shift and go to state 14
    escritura                      shift and go to state 15
    asignacion                     shift and go to state 16
    mientras                       shift and go to state 17
    si                             shift and go to state 18

state 34

    (22) expresion -> NUMERO .

    MAS             reduce using rule 22 (expresion -> NUMERO .)
    MENOS           reduce using rule 22 (expresion -> NUMERO .)
    POR             reduce using rule 22 (expresion -> NUMERO .)
    DIVIDIDO        reduce using rule 22 (expresion -> NUMERO .)
    MODULO          reduce using rule 22 (expresion -> NUMERO .)
    IGUAL           reduce using rule 22 (expresion -> NUMERO .)
    DIFERENTE       reduce using rule 22 (expresion -> NUMERO .)
    MENOR           reduce using rule 22 (expresion -> NUMERO .)
    MAYOR           reduce using rule 22 (expresion -> NUMERO .)
    MENOR_IGUAL     reduce using rule 22 (expresion -> NUMERO .)
    MAYOR_IGUAL     reduce using rule 22 (expresion -> NUMERO .)
    Y               reduce using rule 22 (expresion -> NUMERO .)
    O               reduce using rule 22 (expresion -> NUMERO .)
    ESCRIBIR        reduce using rule 22 (expresion -> NUMERO .)
    ID              reduce using rule 22 (expresion -> NUMERO .)
    MIENTRAS        reduce using rule 22 (expresion -> NUMERO .)
    SI              reduce using rule 22 (expresion -> NUMERO .)
    ENTONCES        reduce using rule 22 (expresion -> NUMERO .)
    PARENTESIS_DERECHO reduce using rule 22 (expresion -> NUMERO .)
    COMA            reduce using rule 22 (expresion -> NUMERO .)
    PUNTO_Y_COMA    reduce using rule 22 (expresion -> NUMERO .)
    FIN             reduce using rule 22 (expresion -> NUMERO .)
    SINO            reduce using rule 22 (expresion -> NUMERO .)


state 35

    (23) expresion -> FLOTANTE .
